fixed overlapping issue with instructions sidebar, changed some style elements

--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,9 @@ body {
 /* Styles the instructions sidebar */
 .instructions {
 
-    height: 40%;
+    height: 44%;
 
-    width: 31.25%;
+    width: 24%;
 
     position: absolute;
 
